# sianry_watch

./: READMD.md  README.md
gsm-weather-esp32s3-esp-idf5.0-master/: CMakeLists.txt  gsm-weather-esp32s3.code-workspace  partitions_example.csv  sdkconfig
gsm-weather-esp32s3-esp-idf5.0-master/components/MultiButton/: multi_button_callback.c  multi_button_callback.h  multi_button_task.c  multi_button_task.h
gsm-weather-esp32s3-esp-idf5.0-master/components/bsp_driver/: CMakeLists.txt  bsp_key.c  bsp_power.c  bsp_power.h  bsp_sd.c  bsp_sd.h
gsm-weather-esp32s3-esp-idf5.0-master/components/delay/: CMakeLists.txt  delay.c  delay.h
gsm-weather-esp32s3-esp-idf5.0-master/components/http_web/: http_web.h
gsm-weather-esp32s3-esp-idf5.0-master/components/lvgl_project/: lvgl_project.c
gsm-weather-esp32s3-esp-idf5.0-master/components/my_https/: https.c  https.h  https_bilibili.c  https_bilibili.h  https_chengshi.c  https_chengshi.h  https_ip.c  https_ip.h  https_kongqi.c  https_kongqi.h  https_laohuangli.c  https_laohuangli.h  https_riluo.c  https_riluo.h  https_shijian.c  https_shijian.h  https_tianqi.c  https_tianqi.h
gsm-weather-esp32s3-esp-idf5.0-master/main/: CMakeLists.txt  main.c
gsm-weather-esp32s3-esp-idf5.0-master/spiffs_image/: config.json
gsm-weather-s3-comprehensive-information-master/: README.en.md  README.md
gsm-weather-s3-comprehensive-information-master/3D打印/: gsm-wheather-s3-主体.stl  gsm-wheather-s3-按键.stl
gsm-weather-s3-comprehensive-information-master/font/: font_ZiDing_K8_12.txt  font_ZiDing_K8_24.txt
资料与文件/: 1.69寸电容触摸屏.PcbLib  1.69触摸屏.STEP
(+84 files in other folders)
